--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "nova-2-omni-demo"
-version = "1.0.0"
-description = "Add your description here"
+version = "1.0.2"
+description = "A Streamlit-based demo application and benchmarking suite to experience and evaluate the powerful multimodal AI capabilities of Amazon Nova 2 Omni."
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
@@ -20,4 +20,13 @@ dependencies = [
     "requests>=2.32.5",
     "strands-agents>=1.21.0",
     "streamlit>=1.52.2",
+]
+
+[dependency-groups]
+benchmark = [
+    "datasets>=4.4.2",
+    "jiwer>=4.0.0",
+    "numpy>=1.21.0,<2.3.0",
+    "soundfile>=0.13.1",
+    "tqdm>=4.67.1",
 ]
